update to work and avatar

--- a/src/app/[locale]/work/projects/en/simple-portfolio-builder.mdx
+++ b/src/app/[locale]/work/projects/en/simple-portfolio-builder.mdx
@@ -1,6 +1,110 @@
 ---
-title: "Simple portfolio creator built with Once UI and Next.js"
-publishedAt: "2024-04-08"
-images:
-  - "/images/projects/project-01/video-01.mp4"
+title: "Starting a New Project: Investigating Bank Robberies"
+publishedAt: "2024-06-23"
+summary: "Exploring patterns in bank robberies using data analysis and machine learning to uncover insights and predict high-risk factors."
+tag: "Investigation"
 ---
+
+Starting a new project is always exciting, especially when it involves uncovering patterns and insights into a complex topic. Today, I’m thrilled to share the beginning of my latest endeavor: **Investigating Bank Robberies**. This project combines crime data, socio-economic factors, and machine learning to analyze and predict robbery dynamics across the United States.
+
+---
+
+## Why This Project?
+
+Bank robberies are a fascinating intersection of human behavior, socio-economic conditions, and geography. By diving into this topic, I aim to:
+- **Understand Patterns:** Explore trends in bank robberies, such as where, when, and how they occur.
+- **Predict Outcomes:** Use machine learning to identify high-risk factors and predict the likelihood of success, injuries, or sentencing severity.
+- **Build Skills:** Apply advanced data analysis and visualization techniques to a real-world problem.
+
+---
+
+## The Project Vision
+
+The goal of this investigation is to analyze patterns in bank robberies and provide actionable insights. Here’s what I hope to achieve:
+- **Descriptive Insights:** Understand how factors like location, time, and demographics influence robbery dynamics.
+- **Predictive Insights:** Develop models to identify high-risk areas and predict robbery outcomes.
+- **Interactive Reporting:** Create a dashboard to visualize findings and communicate results effectively.
+
+---
+
+## The Workflow
+
+The project will follow a structured workflow to ensure thorough analysis:
+
+### **Step 1: Data Collection**
+Gather data from reliable sources:
+- **Crime Data:** FBI Crime Data Explorer, Kaggle datasets.
+- **Population Data:** US Census Bureau.
+- **Geographic Data:** USGS, OpenStreetMap.
+- **Socio-Economic Data:** BEA, BLS.
+
+### **Step 2: Data Cleaning and Integration**
+Prepare the data for analysis:
+- Standardize formats for geographic keys and timestamps.
+- Handle missing values using imputation or removal.
+- Merge datasets to create a comprehensive model combining crime, demographic, and geographic data.
+
+### **Step 3: Exploratory Data Analysis (EDA)**
+Use Python libraries like Pandas, Matplotlib, Seaborn, and Geopandas to uncover initial trends:
+- **Temporal Patterns:** Analyze trends over time, such as seasonal effects.
+- **Spatial Patterns:** Identify robbery hotspots and urban vs. rural dynamics.
+- **Demographic Patterns:** Investigate correlations with age, race, and gender.
+
+### **Step 4: Predictive Modeling**
+Build machine learning models to make predictions:
+- **Classification Tasks:**
+  - Predict high-risk areas for robberies.
+  - Classify robbery outcomes (success or failure).
+- **Regression Tasks:**
+  - Predict injury likelihood or sentencing severity.
+  
+Algorithms to be used include Logistic Regression, Random Forest, and XGBoost, evaluated using metrics like accuracy, F1-score, and RMSE.
+
+### **Step 5: Insights and Reporting**
+Create an interactive dashboard using Dash or Streamlit to visualize:
+- Robbery trends and predictions.
+- Key insights from machine learning models.
+
+---
+
+## Tools and Technologies
+
+This project will leverage the following tools:
+- **Python Libraries:**
+  - Data Analysis: Pandas, NumPy.
+  - Visualization: Matplotlib, Seaborn, Plotly.
+  - Geospatial Analysis: Geopandas.
+  - Machine Learning: Scikit-learn, XGBoost, LightGBM.
+- **Data Sources:**
+  - Crime data from the FBI and Kaggle.
+  - Population data from the US Census Bureau.
+  - Geographic data from USGS and OpenStreetMap.
+- **Dashboard Tools:** Dash, Streamlit.
+
+---
+
+## Challenges Ahead
+
+Like any project, this one comes with its challenges:
+- **Data Quality:** Ensuring completeness and consistency across diverse datasets.
+- **Feature Engineering:** Designing meaningful features for predictive modeling.
+- **Model Complexity:** Balancing interpretability and performance in machine learning models.
+
+---
+
+## What’s Next?
+
+The next steps for this project include:
+1. Finalizing data sources and downloading datasets.
+2. Cleaning and integrating datasets for analysis.
+3. Conducting exploratory data analysis (EDA) to identify trends.
+4. Building machine learning models and evaluating their performance.
+5. Designing an interactive dashboard to present findings.
+
+---
+
+## Closing Thoughts
+
+Embarking on this project is not just an opportunity to solve a challenging problem—it’s a chance to explore new techniques, uncover meaningful patterns, and create a tool that can provide valuable insights. I’m excited about the journey ahead and look forward to sharing updates as I progress.
+
+Are you working on an investigative project too? Let’s connect and exchange ideas!
