--- a/src/app/[locale]/work/projects/en/simple-portfolio-builder.mdx
+++ b/src/app/[locale]/work/projects/en/simple-portfolio-builder.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Starting a New Project: Investigating Bank Robberies"
+title: "Investigating Bank Robberies In The US"
 publishedAt: "2024-06-23"
 summary: "Exploring patterns in bank robberies using data analysis and machine learning to uncover insights and predict high-risk factors."
 tag: "Investigation"
