--- a/src/app/[locale]/work/projects/en/titanic_survival.mdx
+++ b/src/app/[locale]/work/projects/en/titanic_survival.mdx
@@ -1,9 +1,4 @@
----
-title: "Predicting Titanic Survivability"
-publishedAt: "2024-02-06"
-summary: "Analyzing survival patterns on the Titanic using data exploration and machine learning to uncover key factors and predict survival outcomes."
-tag: "Investigation"
----
+# Predicting Titanic Survival: A Machine Learning Investigation
 
 ## 1. Introduction
 
@@ -54,6 +49,9 @@ plt.xlabel('Age')
 plt.ylabel('Frequency')
 plt.show()
 ```
+
+![Age Distribution](./images/age_distribution.png "Age Distribution")
+
 **Analysis**: The majority of passengers were between 20 and 40 years old, indicating a younger demographic onboard. Survival chances for different age groups can provide deeper insights.
 
 #### Survival by Gender
@@ -64,6 +62,9 @@ plt.xlabel('Gender (0=Female, 1=Male)')
 plt.ylabel('Survival Rate')
 plt.show()
 ```
+
+![Survival by Gender](./images/survival_by_gender.png "Survival by Gender")
+
 **Analysis**: Female passengers had a significantly higher survival rate compared to males. This supports historical accounts of "women and children first" policies during the evacuation.
 
 #### Survival by Class
@@ -74,6 +75,9 @@ plt.xlabel('Class (1=First, 2=Second, 3=Third)')
 plt.ylabel('Survival Rate')
 plt.show()
 ```
+
+![Survival by Class](./images/survival_by_class.png "Survival by Class")
+
 **Analysis**: First-class passengers had the highest survival rates, while third-class passengers fared the worst. This highlights socioeconomic disparities in access to lifeboats.
 
 #### Correlation Heatmap
@@ -83,6 +87,9 @@ sns.heatmap(train_df.corr(), annot=True, cmap='coolwarm')
 plt.title('Correlation Heatmap')
 plt.show()
 ```
+
+![Correlation Heatmap](./images/correlation_heatmap.png "Correlation Heatmap")
+
 **Analysis**: Fare and class exhibit notable correlations with survival, while age shows a weaker correlation. This suggests that financial and social status were critical factors.
 
 ---
@@ -108,6 +115,9 @@ train_df['Log_Fare'] = np.log1p(train_df['Fare'])
 train_df['Fare_Squared'] = train_df['Fare'] ** 2
 train_df['Age_Squared'] = train_df['Age'] ** 2
 ```
+
+![Feature Engineering Summary](./images/feature_engineering.png "Feature Engineering")
+
 **Impact**: These transformations enhance the model's ability to identify nuanced patterns in the data.
 
 ---
@@ -141,6 +151,9 @@ accuracy = accuracy_score(y_test, y_pred_adjusted)
 print("Accuracy:", accuracy)
 print("\nClassification Report:\n", classification_report(y_test, y_pred_adjusted))
 ```
+
+![Classification Report](./images/classification_report.png "Classification Report")
+
 **Observation**: The model achieved an accuracy of 87%, with balanced precision and recall scores.
 
 #### Confusion Matrix
@@ -152,6 +165,9 @@ plt.ylabel('Actual')
 plt.title('Confusion Matrix')
 plt.show()
 ```
+
+![Confusion Matrix](./images/confusion_matrix.png "Confusion Matrix")
+
 **Analysis**: The confusion matrix reveals that the model performs well on identifying survivors but occasionally misclassifies non-survivors.
 
 #### Precision-Recall Curve
@@ -165,6 +181,9 @@ plt.title('Precision-Recall Curve')
 plt.legend()
 plt.show()
 ```
+
+![Precision-Recall Curve](./images/precision_recall_curve.png "Precision-Recall Curve")
+
 **Analysis**: The curve highlights the trade-off between precision and recall, with the optimal threshold maximizing the product of both metrics.
 
 ---
